src/objects/Customer_Image__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Images</relationshipLabel>
        <relationshipName>Customer_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Added_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cosign_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cosign_Images1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Id__c</fullName>
        <label>Image Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Type__c</fullName>
        <label>Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Customer Image</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_approval</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Added_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not approved</value>
        </filters>
        <label>Awaiting approval</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>